--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test-watch": "jest --watch",
     "watch": "nodemon src/server.js",
     "start": "node src/server.js"
   },
@@ -16,5 +17,8 @@
     "csv-parse": "^4.15.1",
     "express": "^4.17.2",
     "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "jest": "^27.4.5"
   }
 }
