--- a/server/.gitignore
+++ b/server/.gitignore
@@ -22,3 +22,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+/public/static/js/main.d3559d0b.chunk.js
+/public/static/js/main.d3559d0b.chunk.js.map
