--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.24.0",
     "mongoose": "^6.1.4",
     "nodemon": "^2.0.15"
   }
