--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "csv-parse": "^4.15.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
     "pm2": "^5.1.2"
