--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -1,7 +1,7 @@
 name: NASA Project CI
 on:
-  push:
-    branches: [ master ]
+  #push:
+    #branches: [ master ]
   pull_request:
     branches: [ master ]
 jobs:
