--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "morgan": "^1.10.0",
-    "pm2": "^5.1.2"
+    "pm2": "^5.1.2",
+    "mongoose": "^6.1.4"
   },
   "devDependencies": {
     "jest": "^27.4.5",
